--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,16 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/mongodb-odm-bundle": "^4.2",
+        "friendsofsymfony/rest-bundle": "^3.0",
+        "friendsofsymfony/user-bundle": "dev-bugfix",
+        "jms/serializer-bundle": "^3.7",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/maker-bundle": "^1.21",
+        "symfony/security-bundle": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
@@ -57,5 +63,11 @@
             "allow-contrib": false,
             "require": "5.0.*"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/jethrohicks/FOSUserBundle.git"
+        }
+    ]
 }
