--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/mongodb-odm-bundle": "^4.2",
-        "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
@@ -14,6 +13,8 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.21",
         "symfony/security-bundle": "5.0.*",
+        "symfony/twig-bundle": "5.0.*",
+        "symfony/validator": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
