--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,7 +19,7 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
+            - '../src/Document/'
             - '../src/Kernel.php'
             - '../src/Tests/'
 
