--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=11f7d7df30ac45d1a72cba43017b4473
 ###< symfony/framework-bundle ###
 
 ###> doctrine/mongodb-odm-bundle ###
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb://mongo-symfony5:27017
 MONGODB_DB=symfony
 ###< doctrine/mongodb-odm-bundle ###
 MAILER_URL=null://localhost
@@ -32,3 +32,11 @@ MAILER_USER="ASDF"
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+###< doctrine/doctrine-bundle ###
