--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,12 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "^1.8",
+        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/mongodb-odm-bundle": "^4.2",
+        "doctrine/orm": "^2.7",
+        "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
